# min_flatbuffer

./: CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  main.cpp  orange.fbs  vcpkg.json
